--- a/csstemplate.css
+++ b/csstemplate.css
@@ -51,7 +51,7 @@ a:hover, a:active, a:focus { /* this group of selectors will give a keyboard nav
 .header {
 	border: ridge;
 	border-color: #FF0;
-	height: 100px;
+	height: 150px;
 	color: #FFF;
 	background-image: url(https://4.bp.blogspot.com/-pZ4RI1XB0b8/WClBiREI1ZI/AAAAAAAABr8/wK8HwvaUT4Uuyv7Qjb7AHu_zttZrWsDMwCLcB/s1600/technology.jpg);
 	
@@ -74,6 +74,12 @@ a:hover, a:active, a:focus { /* this group of selectors will give a keyboard nav
 	background-image:url(https://3.bp.blogspot.com/-XldvaKhNO6Q/WCA5B7f3uEI/AAAAAAAABq4/RDHMIjEZ5acOr6dOpQtWDEvrxuvPBFmdQCLcB/s1600/biru.png);
 	padding-bottom: 10px;
 }
+.sidebar21 {
+	float: left;
+	width: 180px;
+	background-image:url(https://3.bp.blogspot.com/-XldvaKhNO6Q/WCA5B7f3uEI/AAAAAAAABq4/RDHMIjEZ5acOr6dOpQtWDEvrxuvPBFmdQCLcB/s1600/biru.png);
+	padding-bottom: 10px;
+}
 .content {
 
 	padding: 10px 0;
@@ -81,6 +87,7 @@ a:hover, a:active, a:focus { /* this group of selectors will give a keyboard nav
 	float: left;
 }
 .sidebar2 {
+	vertical-align:top;
 	float: left;
 	width: 180px;
 	color: #FFF;
@@ -132,7 +139,7 @@ ul.nav1 a, ul.nav a:visited { /* grouping these selectors makes sure that your l
 	display: block; /* this gives the anchor block properties so it fills out the whole LI that contains it so that the entire area reacts to a mouse click. */
 	width: 160px;  /*this width makes the entire button clickable for IE6. If you don't need to support IE6, it can be removed. Calculate the proper width by subtracting the padding on this link from the width of your sidebar container. */
 	text-decoration: none;
-	color: #FFF;
+	color: #f00;
 	background-color:transparent;
 }
 ul.nav1 a:hover, ul.nav a:active, ul.nav a:focus { /* this changes the background and text color for both mouse and keyboard navigators */
